--- a/.gitmodules
+++ b/.gitmodules
@@ -6,5 +6,5 @@
 	url = https://github.com/devcows/hugo-universal-theme.git
 [submodule "public"]
 	path = public
-	url = git@github.com:dirac-uw/dirac-uw.github.io.git
+	url = https://github.com/meredith-durbin/dirac-uw.github.io.git
 	branch = master
