--- a/_config.yml
+++ b/_config.yml
@@ -67,3 +67,4 @@ kramdown:
     coderay_tab_width:         4
     coderay_bold_every:        10
     coderay_css:               style
+theme: jekyll-theme-cayman
